# kilo-browser

./: README.md  package-lock.json  package.json
android/: brave_java_sources.gni
app/: brave_exe.ver
app/linux/: BUILD.gn
brave/: .env
browser/brave_stats/: buildflags.gni
browser/net/: brave_proxying_url_loader_factory.cc  brave_web3_libsodium.cc  brave_web3_libsodium.h  brave_web3_rpc.cc  brave_web3_rpc.h  brave_web3_service.cc  brave_web3_service.h  brave_web3_task.cc  sources.gni
components/brave_service_keys/: BUILD.gn
components/brave_vpn/common/wireguard/win/: BUILD.gn
components/resource/: brave_wallet_resources.grdp
components/speech_to_text/: BUILD.gn
components/update_client/: BUILD.gn
components/variations/: buildflags.gni
components/version_info/: BUILD.gn  version_info.cc  version_info_values.h.version
docs/: help.md
executable/android/: get_and_pack.py
executable/linux/: .gitignore  class.py  delete_other.py  delete_siso.py  delete_test.py  get_bin.py
executable/win/: delete_json.py  delete_other.py  hand_delete.txt  kilo_inno_setup.iss
kilo/str/: brave_components_strings.grd
kilo/word/: kilo-k32.icon
project_build/: config.json
project_build/overlay/: map.json
renderer/: brave_content_renderer_client.cc
resource_browser_string/app/: access_code_cast_strings.grdp  app_management_strings.grdp  bookmarks_strings.grdp  brave_strings.grd  extensions_strings.grdp  generated_resources.grd  glic_strings.grdp  gmc_strings.grdp  nearby_share_strings.grdp  (+7 more)
src/: .gitignore
src/browser/ui/views/: BUILD.gn
(+819 files in other folders)
