# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/toolchain/win/midl.gni")
import("//brave/build/kilo_feature.gni")  

assert(is_win)
   
if(enable_browser_brave_VPN){
    assert(enable_brave_vpn)
}            

midl("brave_wireguard_manager_idl") {
  sources = [ "brave_wireguard_manager_idl.idl" ]

  writes_tlb = true
}
